// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`e2E Real Credentials Tests > should fetch real GSC sites 1`] = `
[
  {
    "hasDomain": true,
    "hasUrl": true,
    "permissionLevel": "siteUnverifiedUser",
  },
  {
    "hasDomain": false,
    "hasUrl": true,
    "permissionLevel": "siteUnverifiedUser",
  },
  {
    "hasDomain": false,
    "hasUrl": true,
    "permissionLevel": "siteOwner",
  },
  {
    "hasDomain": true,
    "hasUrl": true,
    "permissionLevel": "siteOwner",
  },
  {
    "hasDomain": true,
    "hasUrl": true,
    "permissionLevel": "siteFullUser",
  },
  {
    "hasDomain": true,
    "hasUrl": true,
    "permissionLevel": "siteOwner",
  },
  {
    "hasDomain": false,
    "hasUrl": true,
    "permissionLevel": "siteRestrictedUser",
  },
  {
    "hasDomain": true,
    "hasUrl": true,
    "permissionLevel": "siteOwner",
  },
]
`;

exports[`e2E Real Credentials Tests > should fetch sites with sitemaps 1`] = `
[
  {
    "hasSitemaps": false,
    "hasUrl": true,
    "permissionLevel": "siteFullUser",
    "sitemapCount": 0,
  },
  {
    "hasSitemaps": false,
    "hasUrl": true,
    "permissionLevel": "siteOwner",
    "sitemapCount": 0,
  },
  {
    "hasSitemaps": false,
    "hasUrl": true,
    "permissionLevel": "siteOwner",
    "sitemapCount": 0,
  },
  {
    "hasSitemaps": false,
    "hasUrl": true,
    "permissionLevel": "siteRestrictedUser",
    "sitemapCount": 0,
  },
  {
    "hasSitemaps": false,
    "hasUrl": true,
    "permissionLevel": "siteOwner",
    "sitemapCount": 0,
  },
  {
    "hasSitemaps": false,
    "hasUrl": true,
    "permissionLevel": "siteOwner",
    "sitemapCount": 0,
  },
]
`;
